Fix automatic build

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
---extra-index-url https://gitpro.hanse-merkur.de/api/v4/projects/6644/packages/pypi/simple
+--extra-index-url https://hansemerkur.github.io/pykube-ng/simple
 aiorgwadmin==1.0.0
 kopf==1.35.4
 pykube-ng==22.1.1
