--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -10,8 +10,6 @@ on:
   push:
     branches:
     - master
-    paths:
-    - satisfactory/**
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -54,7 +52,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ${{ env.PACKAGE_NAME }}
-          file: ${{ env.PACKAGE_NAME }}/Dockerfile
+          file: Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
